Fixed bug where text turned white on cards and was not visible, styled list for proposal list show page.

--- a/freelance-fr/app/documents/documents.component.css
+++ b/freelance-fr/app/documents/documents.component.css
@@ -1,3 +1,7 @@
 .spacing {
   margin-top: 20px;
 }
+
+.text {
+  color: black;
+}
