--- a/freelance-fr/app/proposal/proposal-new.component.css
+++ b/freelance-fr/app/proposal/proposal-new.component.css
@@ -1,3 +1,7 @@
 .form-container {
   padding: 30px;
 }
+
+.text {
+  color: black;
+}
